@@ -39,10 +39,10 @@ AC_ARG_ENABLE(justify,
     AC_DEFINE(DISABLE_JUSTIFY) 
  fi])
 
-AC_ARG_ENABLE(spell,
+AC_ARG_ENABLE(speller,
 [  --disable-speller       Disables spell checker function],
  [if test x$enableval != xyes; then
-    AC_DEFINE(DISABLE_SPELL) 
+    AC_DEFINE(DISABLE_SPELLER) 
  fi])
 
 AC_MSG_CHECKING(whether to use slang)
